# object-storage-integrators

./: .gitignore  CONTRIBUTING.md  README.md  actions.yaml  charmcraft.yaml  concierge.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  spread.yaml  tox.ini
.github/: renovate.json5
.github/workflows/: ci.yaml  integration_test.yaml  release.yaml  sync_issue_to_jira.yaml
azure_storage/: charmcraft.yaml  config.yaml  noxfile.py  pyproject.toml  tox.ini
azure_storage/src/: constants.py
azure_storage/src/core/: context.py  domain.py
azure_storage/src/events/: base.py  general.py  provider.py
azure_storage/src/managers/: azure_storage.py
azure_storage/src/utils/: secrets.py
azure_storage/tests/integration/: conftest.py  helpers.py  test_azure.py
azure_storage/tests/integration/test-charm-azure/: charmcraft.yaml
azure_storage/tests/integration/test-charm-azure/lib/charms/data_platform_libs/v0/: azure_storage.py  data_interfaces.py
azure_storage/tests/integration/test-charm-azure/src/: charm.py
azure_storage/tests/unit/: conftest.py  test_azure.py  test_charm.py
environments/: concierge-lxd.yaml  concierge-microk8s.yaml
gcs/: README.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  tox.ini
gcs/lib/charms/data_platform_libs/v0/: common_object_storage.py  data_interfaces.py  object_storage.py
gcs/src/: charm.py  constants.py
gcs/src/core/: charm_config.py  context.py  domain.py
gcs/src/events/: __init__.py  base.py  general.py  provider.py  statuses.py
gcs/src/managers/: gc_storage.py
gcs/src/utils/: __init__.py  logging.py  secrets.py
gcs/tests/integration/: architecture.py  conftest.py  test_config.py  test_relation.py
gcs/tests/integration/requirer-charm/: charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml
gcs/tests/integration/requirer-charm/lib/charms/data_platform_libs/v0/: data_interfaces.py  object_storage.py
gcs/tests/integration/requirer-charm/src/: charm.py
gcs/tests/integration/requirer-charm/src/events/: general.py  requirer.py
gcs/tests/unit/: conftest.py  test_charm_config.py  test_charm_status.py  test_gcs_relation.py  test_relation.py
lib/charms/data_platform_libs/v0/: azure_storage.py  object_storage.py
s3/: README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  tox.ini
s3/src/: charm.py  constants.py  s3_lib.py
s3/src/core/: context.py  domain.py
s3/src/events/: __init__.py  actions.py  base.py  general.py  provider.py  statuses.py
s3/src/managers/: __init__.py  s3.py
s3/src/utils/: __init__.py  logging.py  secrets.py
s3/tests/integration/: conftest.py  domain.py  helpers.py  test_charm.py  test_config.py  test_iam_permissions.py  test_lib_compat.py  test_permissions.py  test_provider.py
s3/tests/integration/resources/: create_bucket_disabled.json  create_bucket_enabled.json  list_objects_v2_disabled.json  list_objects_v2_enabled.json
s3/tests/integration/test-charm-s3/: actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml
s3/tests/integration/test-charm-s3-v0/: actions.yaml  metadata.yaml  pyproject.toml
s3/tests/integration/test-charm-s3-v0/src/: charm.py
s3/tests/integration/test-charm-s3/src/: charm.py  s3_lib.py
s3/tests/interface/: conftest.py
s3/tests/unit/: conftest.py  test_charm.py  test_config.py  test_provider.py  test_proxy.py
src/: charm.py  constants.py
src/core/: context.py  domain.py
src/events/: actions.py  base.py  general.py  provider.py
src/managers/: azure_storage.py  object_storage.py
src/utils/: secrets.py
tests/azure_storage_microk8s/test_charm/: task.yaml
tests/azure_storage_vm/test_charm/: task.yaml
tests/gcs_vm/test_config/: task.yaml
tests/gcs_vm/test_relation/: task.yaml
tests/gcs_vm/test_status/: task.yaml
tests/integration/: helpers.py  test_azure.py
tests/integration/test-charm-azure/: charmcraft.yaml  metadata.yaml  requirements.txt
tests/integration/test-charm-azure/lib/charms/data_platform_libs/v0/: azure_storage.py  object_storage.py
tests/integration/test-charm-azure/src/: charm.py
tests/interface/: conftest.py
tests/s3_microk8s/test_charm/: task.yaml
tests/s3_microk8s/test_config/: task.yaml
tests/s3_microk8s/test_iam_permissions/: task.yaml
tests/s3_microk8s/test_lib_compat/: task.yaml
tests/s3_microk8s/test_provider/: task.yaml
tests/s3_vm/test_charm/: task.yaml
tests/s3_vm/test_config/: task.yaml
tests/s3_vm/test_iam_permissions/: task.yaml
tests/s3_vm/test_lib_compat/: task.yaml
tests/s3_vm/test_provider/: task.yaml
tests/unit/: test_azure.py
