# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"

[tool.poetry.dependencies]
python = "^3.11"
ops = {version = ">=3.5.0", extras = ["testing"]}
tenacity = "^9.1.2"
pydantic = "^2.12.5"
google-cloud-storage = "^3.7.0"
google-auth = "^2.45.0"
requests = "^2.32.5"
typing-extensions = "^4.15.0"
data-platform-helpers = ">=0.1.7"

[tool.poetry.group.charm-libs.dependencies]
cosl = "^0.0.51"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
ruff = "^0.14.10"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.14.10"
codespell = "^2.4.1"

[tool.poetry.group.unit.dependencies]
coverage = { extras = ["toml"], version = "^7.13.0" }
pytest = "^8.4.2"
pytest-asyncio = "*"

[tool.poetry.group.integration.dependencies]
pytest = "^8.4.2"
jubilant = "^1.6.2"
juju = "^3.6.0.0"

# Testing tools configuration

[tool.poetry.group.dev.dependencies]
jubilant = "^1.6.2"
pytest = "^8.4.2"
pytest-asyncio = "^1.3.0"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
markers = ["unstable"]

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py311"]

[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info", "tests/integration/test-charm-gcs"]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D401",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
]
ignore = ["E501", "D107"]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104", "E999"] }
mccabe.max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pyright]
include = ["src"]
extraPaths = ["./lib", "src"]
pythonVersion = "3.11"
pythonPlatform = "All"

