# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"

[tool.poetry.dependencies]
python = "^3.10"
ops = ">=3.5.0"
# TODO: Move into charm-libs groups after canonical/data-platform-libs#201 is merged
pydantic = "^2.12.5"
tenacity = "^9.1.2"
boto3 = ">=1.42.13"
data-platform-helpers = "^0.1.7"

[tool.poetry.group.charm-libs.dependencies]

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
ruff = "^0.14.10"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.14.10"
codespell = "^2.4.1"
mypy = "^1.19.1"
types-boto3 = { extras = ["s3"], version = "^1.42.13" }

[tool.poetry.group.unit.dependencies]
coverage = { extras = ["toml"], version = "^7.13.0" }
pytest = "^8.4.2"
pytest-asyncio = "*"
ops = { version = ">=3.5.0", extras = ["testing"] }

[tool.poetry.group.integration.dependencies]
pytest = "^8.4.2"
jubilant = "^1.6.2"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
markers = ["unstable"]

[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info", "tests/integration/test-charm-s3"]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D401",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
]
ignore = ["E501", "D107"]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104", "E999"], "src/*/__init__.py" = ["D104"] }
mccabe.max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
exclude = [
  "lib",
  "tests/integration/test-charm-s3/lib",
  "tests/integration/test-charm-s3/src/s3_lib.py",
]
follow_imports = "silent"

[[tool.mypy.overrides]]
module = [
  "charms.data_platform_libs.*",
  "data_platform_helpers.*",
]
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
extraPaths = ["./lib", "src"]
pythonVersion = "3.10"
pythonPlatform = "All"
